# Tools

./: .gitignore  README.md
libgphoto/: CMakeLists.txt
libgphoto/include/: samples.h
libgphoto/src/: capture.cpp  getCamNamePort.cpp
stereoCamCalib/: cali_intrin.py  cali_stereo.py  convert.py  copyImage.py  draw.py  rename.py
steroCamCalib/: cali_intrin.py  cali_stero.py
steroCamCalib/camera/: cam0.cam  cam1.cam
